Fix Index.html Title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--My CSS-->
         <link rel="stylesheet" href="main.css">
 
-        <title>Document</title>
+        <title>Mowgli: Home</title>
     </head>
     <body>
         <div class="container-fluid">
