--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <!--My CSS-->
         <link rel="stylesheet" href="main.css">
 
+        <!--favicon-->
+        <link rel="shortcut icon" href="favicon.png" type="image/png">
+
         <title>Mowgli: Home</title>
     </head>
     <body>
