Add a Large Logo to the Home Page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             </nav>
         </div>
         <div class="container-sm">
+            <div class="row justify-content-center align-items-center">
+                <img src="big-logo.png" alt="Logo" class="img-fluid big-logo">
+            </div>
             <h1>Welcome To <br> My Blog!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores rerum laborum cumque excepturi sequi, est fuga provident ullam molestias optio exercitationem quisquam adipisci incidunt, voluptas dolorum magni recusandae aliquid?
             Facilis, ullam. Sint non iusto neque labore laborum sunt omnis quibusdam quasi amet repellendus enim soluta harum, voluptatum veniam, quisquam recusandae eligendi mollitia ipsa culpa! Beatae itaque eos nulla est!
